# simulacrum-engine

./: README.md  config.toml  pyproject.toml
attic/: plugins.py
attic/lib/: lib.py
attic/simulacrum_engine/: __init__.py  camera.py  color.py  config.py  events.py  game.py  input.py  render_object.py  renderer.py  window.py
attic/simulacrum_engine/assets/: asset.py
attic/simulacrum_engine/ui_lib/: text.py
attic/simulacrum_engine/utils/: asset_utils.py  gfx_utils.py
attic/tests/game_01/: main.py
docs/: .$simulacrum_engine.drawio.bkp  engine_architecture.drawio  simulacrum_engine.drawio
notes/: .$engine_architecture.drawio.bkp  engine_architecture.drawio  simulacrum_engine.drawio
simulacrum_engine/: __init__.py  _types.py  component.py  config.py  engine.py  features.py  game.py  input.py  io_tools.py  io_utils.py  logger.py  render_object.py  renderer.py  shaderlib.py  window.py
simulacrum_engine/animation/: __init__.py  animation.py  animation_manager.py
simulacrum_engine/assets/: __init__.py  asset.py  asset_manager.py  asset_utils.py
simulacrum_engine/core/: __init__.py  component.py  config.py  engine.py  events.py  io_tools.py  logger.py  vec_tools.py
simulacrum_engine/core/assets/: __init__.py  asset.py  asset_manager.py  asset_utils.py  spritesheet.py
simulacrum_engine/core/ecs/: __init__.py  ecs_manager.py  loader.py
simulacrum_engine/core/input/: __init__.py  input_manager.py  input_method.py  keyboard.py  mouse.py
simulacrum_engine/core/physics/: physics_manager.py
simulacrum_engine/core/rendering/: color.py  gfx_tools.py  gl_context.py  render_manager.py  render_object.py  renderer.py  spritesheet.py
simulacrum_engine/core/sound/: sound.py  sound_manager.py
simulacrum_engine/core/ui/: ui_manager.py
simulacrum_engine/core/window/: __init__.py  frame_manager.py  screen.py  window.py  window_manager.py
simulacrum_engine/ecs/: __init__.py  ecs_manager.py  loop.py  system.py
simulacrum_engine/input/: input_manager.py  input_method.py  keyboard.py  mouse.py
simulacrum_engine/physics/: __init__.py  physics_manager.py
simulacrum_engine/rendering/: __init__.py  gfx_tools.py  gl_context.py  render_manager.py  render_object.py  renderer.py
simulacrum_engine/sound/: __init__.py  sound_manager.py
simulacrum_engine/spritesheets/: __init__.py  spritesheet.py
simulacrum_engine/ui/: __init__.py  dom.py  layout.py  tree.py  ui_manager.py
simulacrum_engine/ui/elements/: __init__.py  element.py  panel.py  text.py
simulacrum_engine/utils/: gfx_utils.py  io_utils.py
simulacrum_engine/window/: frame_manager.py  screen.py  window.py  window_manager.py
tests/: config.toml  main.py  states.py  test_core.py
tests/components/: __init__.py  animatable.py  collider.py  controllable.py  controller.py  physics_body.py  position.py  renderable.py  sprite.py  state.py  state_control.py  test.py  velocity.py
tests/config/: test.toml
tests/ecs/components/: __init__.py
tests/game/: controller.py  game.py  physics.py  player.py  rendering.py  states.py
tests/game/ui/: test_panels.py
tests/shaders/: frag.frag
tests/states/: states_01.py  states_02.py
tests/trees/: trees.py
tests/ui/: __init__.py  panel.py  rect.py
(+9 files in other folders)
