[tool.poetry]
name = "simulacrum-engine"
version = "0.1.0"
description = ""
authors = ["Jonathan Crum <jcrum@theobogroup.com>"]
readme = "README.md"
packages = [{include = "simulacrum_engine"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
beartype = "^0.17.2"
pytest = "^8.0.2"
moderngl = "^5.10.0"
pecs-framework = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "F401",   # module imported but unused
    "F403",   # 'from module import *' unused; unable to detect undefined names
    "F405",   # name may be undefined, or defined from star imports
    "F841",   # local variable 'remote' is assigned to but never used
]
