[tool.poetry]
name = "simulacrum-engine"
version = "0.1.9"
description = "A game engine built with PyGame and ModernGL"
license = "MIT"
authors = ["Jonathan Crum <crumja4@gmail.com>"]
readme = "README.md"
include = ["VERSION", "README.md"]
packages = [
    { include = "simulacrum_engine" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.10"
tag_format = "v$version"
version_files = [
    "VERSION",
    "pyproject.toml:^version",

]
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame = "^2.5.2"
beartype = "^0.17.2"
pytest = "^8.0.2"
moderngl = "^5.10.0"
pecs-framework = "^1.3.3"
rich = "^13.7.1"
tomlkit = "^0.12.4"
pydantic = "^2.6.3"
devtools = "^0.12.2"
ansicolors = "^1.1.8"
structlog = "^24.1.0"
pendulum = "^3.0.0"
treeswift = "^1.1.40"
transitions = "^0.9.0"
python-statemachine = "^2.1.2"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.20.0"
ruff = "^0.3.4"
dunamai = "^1.19.2"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "F401",   # module imported but unused
    "F403",   # 'from module import *' unused; unable to detect undefined names
    "F405",   # name may be undefined, or defined from star imports
    "F841",   # local variable 'remote' is assigned to but never used
]
